@@ -130,11 +130,12 @@ class Album {
 
 	} // get_song_ids
 
-	/*!
-		@function format_album
-		@dicussion reformats this object with f_name, f_songs and f_artist 
-			that contain links etc...
-	*/
+	/**
+	 * format_album
+	 * reformats this object with f_name, f_songs and f_artist 
+	 * that contain links etc...
+	 * //FIXME: Rename to format() so that it can be called more dynamicly between object types
+	 */
 	function format_album() { 
 
 	        $web_path = conf('web_path');
@@ -143,6 +144,7 @@ class Album {
 		$name 		= scrub_out(truncate_with_ellipse($this->name,conf('ellipse_threshold_album')));
 		$artist		= scrub_out($this->artist);
 	        $this->f_name	= "<a href=\"$web_path/albums.php?action=show&amp;album=" . $this->id . "\" title=\"" . scrub_out($this->name) . "\">" . $name . "</a>";
+		$this->f_link	= "<a href=\"$web_path/albums.php?action=show&amp;album=" . scrub_out($this->id) . "\" title=\"" . scrub_out($this->name) . "\">" . $name . "</a>";
 	        $this->f_songs	= "<div align=\"center\">" . $this->songs . "</div>";
 		if ($this->artist_count == '1') { 
 		        $this->f_artist	= "<a href=\"$web_path/artists.php?action=show&amp;artist=" . $this->artist_id . "\">" . $artist . "</a>";
@@ -157,10 +159,10 @@ class Album {
 
 	} // format_album
 
-	/*!
-		@function get_art
-		@discussion get art wrapper function
-	*/
+	/**
+	 * get_art
+	 * get art wrapper function
+	 */
 	function get_art($fast = 0) { 
 
 		/* Check DB first */
